feat(server): adding meta endpoint to allow clients to discover contract metadata
